force-app/main/default/objects/Flight_Segment__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the physical aircraft (Asset) assigned to operate this specific leg.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Flight Segments</relationshipLabel>
    <relationshipName>Flight_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>