force-app/main/default/objects/Flight_Segment__c/fields/Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The arrival airport for this specific flight segment.</description>
    <label>Destination Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Arriving Segments</relationshipLabel>
    <relationshipName>Arriving_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>