force-app/main/default/objects/Flight_Segment__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <description>Master-Detail relationship linking this physical segment to the parent commercial flight.</description>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Flight Segments</relationshipLabel>
    <relationshipName>Flight_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>