force-app/main/default/objects/Flight_Segment__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The origin airport for this specific flight segment.</description>
    <label>Origin Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Departing Segments</relationshipLabel>
    <relationshipName>Origin_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>