force-app/main/default/objects/Flight_Segment__c/fields/Seat_Map_JSON__c.field-meta.xml
<CustomField>
    <fullName>Seat_Map_JSON__c</fullName>
    <description>Live transactional JSON representing the seat inventory for this segment. Handles concurrency locks and seat states (AVAILABLE, HELD, OCCUPIED).</description>
    <label>Seat Map JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>